--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -13,15 +13,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="2">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/tittle_app" />
+            android:text="@string/tittle_app"
+            android:textAppearance="@style/AppTheme"
+            android:textSize='60sp'
+            android:layout_marginLeft="25sp"
+            android:textColor="@color/theme_primary"/>
 
     </LinearLayout>
 
@@ -33,7 +35,10 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/btn_1" />
+            android:text="@string/btn_1"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/theme_components"
+            android:background="@drawable/button"/>
 
     </LinearLayout>
 
@@ -45,7 +50,10 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/btn_2" />
+            android:text="@string/btn_2"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/theme_components"
+            android:background="@drawable/button"/>
 
     </LinearLayout>
 
@@ -57,7 +65,11 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/btn_3" android:background="@color/theme_botton"/>
+            android:text="@string/btn_3"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/theme_components"
+            android:background="@drawable/button"
+            />
 
     </LinearLayout>
 
@@ -70,7 +82,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/btn_4"
-            android:background="@color/theme_botton"/>
+            android:layout_marginTop="5dp"
+            android:textColor="@color/theme_components"
+            android:background="@drawable/button"/>
 
     </LinearLayout>
 
@@ -83,7 +97,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/btn_5"
-            android:background="@color/theme_botton"/>
+            android:layout_marginTop="5dp"
+            android:textColor="@color/theme_components"
+            android:background="@drawable/button"
+            />
 
     </LinearLayout>
 
@@ -105,7 +122,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="@string/subtittle"
-                android:layout_gravity="center_vertical" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="10dp" />
 
         </LinearLayout>
 
@@ -123,7 +142,8 @@
                 android:text="@string/web_page"
                 android:layout_gravity="center_vertical"
                 android:autoLink="all"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:layout_marginLeft="100dp" />
 
         </LinearLayout>
 
