--- a/app/src/main/res/layout/activity_best_calification.xml
+++ b/app/src/main/res/layout/activity_best_calification.xml
@@ -7,22 +7,38 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="telmoapp.com.telmoapp.ListarMotelesActivityFragment">
+    tools:context="telmoapp.com.telmoapp.bestCalification">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight=".001"
+        android:layout_weight="0.14"
         android:orientation="vertical"
         android:paddingBottom="10dp">
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".001"
-            android:text="@string/seek"
-            android:textAlignment="textStart" />
+            android:text="@string/tittle_app"
+            android:textAppearance="@style/AppTheme"
+            android:textSize='60sp'
+            android:layout_marginLeft="25sp"
+            android:textColor="@color/theme_primary"
+            android:paddingTop="20px"/>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/subtittle_bestCalification"
+            android:textAppearance="@style/AppTheme"
+            android:textSize='20sp'
+            android:layout_marginLeft="25sp"
+            android:textColor="@color/theme_primary"
+            android:paddingTop="20px"/>
+
 
     </LinearLayout>
 
@@ -83,6 +99,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/una_estrella" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -133,6 +154,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -172,6 +209,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.1">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -240,12 +282,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/una_estrella" />
         </LinearLayout>
     </LinearLayout>
 
 
 </LinearLayout>
-
-
-
-
