--- a/app/src/main/res/layout/activity_motels_nearby.xml
+++ b/app/src/main/res/layout/activity_motels_nearby.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="telmoapp.com.telmoapp.motelsNearby">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="@string/title_activity_motels_nearby" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
