--- a/app/src/main/res/layout/fragment_sex_shop_profile.xml
+++ b/app/src/main/res/layout/fragment_sex_shop_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imageView"
-                android:src="@mipmap/sexShop_1"
+                android:src="@mipmap/sexshop_1"
                 android:layout_alignParentTop="true"/>
 
         </RelativeLayout>
