--- a/app/src/main/res/layout/fragment_listar_moteles.xml
+++ b/app/src/main/res/layout/fragment_listar_moteles.xml
@@ -45,6 +45,7 @@
                 android:text="@string/motel_1" />
 
             <TextView
+                android:id="@+id/link1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
