Se corrige el problema de navegacion entre vistas

--- a/app/src/main/res/layout/activity_listar_moteles.xml
+++ b/app/src/main/res/layout/activity_listar_moteles.xml
@@ -1,5 +1,12 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="telmoapp.com.telmoapp.ListarMotelesActivityFragment"
-    tools:layout="@layout/fragment_listar_moteles" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    tools:layout="@layout/fragment_listar_moteles">
+
+</LinearLayout>
