--- a/app/src/main/res/layout/fragment_index_activity.xml
+++ b/app/src/main/res/layout/fragment_index_activity.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="telmoapp.com.telmoapp.IndexActivityFragment">
@@ -30,14 +31,14 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <Button
-            android:id="@+id/btn_lista"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/btn_1"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/theme_components"
-            android:background="@drawable/button"/>
+       <Button
+           android:id="@+id/btn_lista"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:text="@string/btn_1"
+           android:layout_marginTop="5dp"
+           android:textColor="@color/theme_components"
+           android:background="@drawable/button" />
 
     </LinearLayout>
 
