--- a/app/src/main/res/layout/fragment_listar_moteles.xml
+++ b/app/src/main/res/layout/fragment_listar_moteles.xml
@@ -50,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="70dp"
-                android:text="@string/ver" />
+                android:text="@string/ver"
+                android:onClick="true"/>
 
             <TextView
                 android:layout_width="wrap_content"
