Se crea conexion al recurso, se consume el API, se parsea la informacion

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,7 @@
     <color name="theme_botton">#D50000</color>
     <color name="theme_white">#FFFFFF</color>
 
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:colorPrimary">@color/theme_primary</item>
         <item name="android:colorPrimaryDark">@color/theme_dark</item>
         <item name="android:navigationBarColor">@color/theme_primary</item>
