--- a/app/src/main/res/layout/fragment_motel_profile.xml
+++ b/app/src/main/res/layout/fragment_motel_profile.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
@@ -22,12 +23,12 @@
             android:orientation="vertical"
             android:paddingBottom="10dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView"
-                android:src="@mipmap/motel_1"
-                android:layout_alignParentTop="true"/>
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/logoProfile"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="8dp" />
 
         </RelativeLayout>
 
@@ -163,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="15dp"
-                    android:text="@string/motel_description" />
+                    android:id="@+id/texto1" />
 
             </LinearLayout>
 
