--- a/app/src/main/res/layout/fragment_motel_profile.xml
+++ b/app/src/main/res/layout/fragment_motel_profile.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<GridView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView01"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <GridView
-        android:id="@+id/gridView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</ScrollView>
+    android:id="@+id/gridView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+</GridView>
